# clipdb

./: README.rst  pyproject.toml
src/clipdb/: __init__.py  show_info.py
